<resources>
    <string name="app_name">Spoon Forkoni</string>
    <string name="text_view_second">text_view_second</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="click">CLICK</string>
    <string name="step_by_step">Step by step</string>
    <string name="missed_ingredients">missed ingredients</string>
    <string name="time_for_preparing">time for preparing</string>
    <string name="ingredients">Ingredients:</string>
    <string name="equipment">Equipment:</string>
    <string name="enter_here">Enter ingredients</string>
    <string name="find_recipes">Here you can find recipes based on what you already have in the fridge!</string>
    <string name="start">start</string>
    <string name="description">Description:</string>
    <string name="equipment_tool_bar">Equipment</string>
    <string name="explain_missed_ingredients">You have entered the ingredients that you have. Here are the ingredients you need more</string>
    <string name="number_step">Step №</string>
    <string name="set_alarm">Set timer</string>
    <string name="get_started">get started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="discovering">discovering</string>
    <string name="shop_list">shop_list</string>
    <string name="profile">profile</string>
    <string name="favorite">favorite</string>
    <string name="logout">LogOut</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registry">Registry</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="cheap">Cheap</string>
    <string name="likes">Likes</string>
    <string name="price_per_serving">Price per serving</string>
    <string name="search">Search</string>
    <string name="recipe_s_info">Recipe\'s info</string>
    <string name="add_recipes_and_we_will_show_it_here">Add recipes and we will show it here</string>
    <string name="add_recipes_and_we_will_organize_your_shop_list">Add recipes and we will organize your shop list</string>
    <string name="go_web">GO WEB</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="change_profile">Change profile</string>
    <string name="delete_me">Delete me</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="hours">hours</string>
    <string name="min">min</string>
    <string name="email">Email</string>
    <string name="register_me">Register me</string>
    <string name="score">Score</string>
    <string name="rang">Rang</string>
    <string name="favorite_1">Favorite</string>
    <string name="zero">0</string>
    <string name="like">Like</string>
    <string name="shoplist">ShopList</string>
</resources>