<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_like"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="Menu" />

    <Button
        android:id="@+id/button_step_by_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_fr_more_info"
        android:gravity="center"
        android:text="@string/step_by_step" />

    <Button
        android:id="@+id/button_missed_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_fr_more_info"
        android:gravity="center"
        android:text="@string/missed_ingredients" />

    <Button
        android:id="@+id/button_recipe_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_fr_more_info"
        android:gravity="center"
        android:text="@string/recipe_s_info" />

    <Button
        android:id="@+id/button_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button_fr_more_info"
        android:gravity="center"
        android:text="@string/set_alarm" />

</LinearLayout>
