<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="Timer manager" />

    <LinearLayout
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <NumberPicker
            android:id="@+id/hours"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:layout_gravity="center"
            android:text="@string/hours"/>

        <NumberPicker
            android:id="@+id/minutes"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:layout_gravity="center"
            android:text="@string/min"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_36"
        tools:text ="0:00"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start"/>


        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stop"/>




    </LinearLayout>

</LinearLayout>