<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginBottom="@dimen/dp_400"
        android:background="@drawable/kisspng_computer_icons_man_avatar_male_login_5b1946d63d3161_6399601615283831902507"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/validation_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/login_image">

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:gravity="center"
            android:hint="@string/login"
            android:textSize="@dimen/sp_36" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/validation_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/validation_login">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="36sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/validation_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/validation_password">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:gravity="center"
            android:hint="@string/email"
            android:textSize="36sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/register_me"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/validation_email" />

    <LinearLayout
        android:id="@+id/linear"
        app:layout_constraintTop_toBottomOf="@id/button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_16_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16_dp"
            android:fontFamily="@font/architects_daughter"
            android:lines="1"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/text_size_tv_spoon" />

        <TextView
            android:id="@+id/sign_in"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16_dp"
            android:layout_marginBottom="@dimen/margin_16_dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/sign_in"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size_tv_spoon" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>