<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Profile" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="@dimen/profile_iv_width"
        android:layout_height="@dimen/profile_iv_width"
        android:layout_marginBottom="@dimen/profile_iv_width"
        android:background="@drawable/lovepik_com_611574900_cartoon_pineapple_vector_download"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:textSize="@dimen/text_size_ingredient_tv"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_avatar"
        tools:text="Nickname" />

    <TextView
        android:id="@+id/text_view_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/favorite_1"
        android:textSize="@dimen/tv_recipes_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname" />


    <TextView
        android:id="@+id/text_view_rang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/rang"
        android:textSize="@dimen/tv_recipes_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

    <TextView
        android:id="@+id/amount_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/tv_recipes_text_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_favorite" />


    <TextView
        android:id="@+id/amount_rang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/tv_recipes_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_rang" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="@dimen/dimen_120_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_48"
        android:text="@string/logout"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_favorite" />

    <Button
        android:id="@+id/button_delete_me"
        android:layout_width="@dimen/dimen_120_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_48"
        android:text="@string/delete_me"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_rang" />


</androidx.constraintlayout.widget.ConstraintLayout>