<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:menu="@menu/menu_toolbar_info_recipe"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="Recipe's information" />

    <TextView
        android:id="@+id/recipe_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_start_equipment_item"
        android:fontFamily="@font/architects_daughter"
        android:lines="2"
        android:textSize="@dimen/text_size_ingredient_tv"
        android:visibility="gone"
        tools:text="Recipe name" />

    <LinearLayout
        android:id="@+id/linear_vegetarian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/recipe_info_name">

        <TextView
            android:id="@+id/text_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_start_equipment_item"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/vegetarian"
            android:textSize="@dimen/tv_recipes_text_size" />

        <CheckBox
            android:id="@+id/checkbox_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_checkbox"
            android:layout_marginTop="@dimen/margin_start_equipment_item"
            app:layout_constraintTop_toBottomOf="@id/recipe_info_name" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cheap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linear_vegetarian">

        <TextView
            android:id="@+id/text_cheap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_start_equipment_item"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/cheap"
            android:textSize="@dimen/tv_recipes_text_size" />

        <CheckBox
            android:id="@+id/checkbox_cheap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="@dimen/margin_start_equipment_item"
            app:layout_constraintTop_toBottomOf="@id/recipe_info_name" />


    </LinearLayout>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_likes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linear_vegetarian">

        <TextView
            android:id="@+id/text_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_start_equipment_item"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/likes"
            android:textSize="@dimen/tv_recipes_text_size" />

        <TextView
            android:id="@+id/text_amount_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="260dp"
            android:fontFamily="@font/architects_daughter"
            android:textSize="@dimen/tv_recipes_text_size"
            tools:text="123" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/linear_vegetarian">

        <TextView
            android:id="@+id/text_price_per_serv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_start_equipment_item"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/price_per_serving"
            android:textSize="@dimen/tv_recipes_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_likes" />

        <TextView
            android:id="@+id/text_price_per_serv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:fontFamily="@font/architects_daughter"
            android:textSize="@dimen/tv_recipes_text_size"
            tools:text="123" />


    </LinearLayout>

    <TextView
        android:id="@+id/recipe_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_start_equipment_item"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/ingredients"
        android:textSize="@dimen/text_size_ingredient_tv"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="@dimen/rv_step_padding"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/ingredient" />

    <Button
        android:id="@+id/actiob_to_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_start_equipment_item"
        android:text="@string/go_web"
        android:visibility="gone" />


</LinearLayout>