<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_spoonforkoni"
        android:layout_marginTop="@dimen/spoon_iv_margin_top"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_16_dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:background="@drawable/kpag655qfidg6hump7zg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/get_started"
        android:textSize="@dimen/text_size_ingredient_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <LinearLayout
        android:id="@+id/linear"
        app:layout_constraintTop_toBottomOf="@id/button_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_16_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16_dp"
            android:fontFamily="@font/architects_daughter"
            android:lines="1"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/text_size_tv_spoon" />

        <TextView
            android:id="@+id/sign_in"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16_dp"
            android:layout_marginBottom="@dimen/margin_16_dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/sign_in"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_size_tv_spoon" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>